--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "About Me"
+  - title: "简介"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
+  - title: "学术动态"
+    url: "/#-xsdt"
 
-  - title: "Publications"
-    url: "/#-publications"
+  - title: "论文专利"
+    url: "/#-lwzl"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "科研项目"
+    url: "/#-kyxm"
 
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "工作服务"
+    url: "/#-gzfw"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "求学经历"
+    url: "/#-qxjl"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "荣誉奖项"
+    url: "/#-ryjx"
