add new accepted article

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=Rm2lL78AAAAJ"
-  email            : "qiaozhi_he@outlook.com"
+  email            : "qiaozhi.he@outlook.com"
   researchgate     : "https://www.researchgate.net/profile/Xingyan-Chen-2?ev=hdr_xprf" # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
